--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
-# aws-training
+= aws-training
+:toc:
 
+== Permissions for 'KEY-PAIRS.pem' are too open. It is required that your private key files are NOT accessible by others
 
 ERROR:
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@ -14,8 +16,8 @@ Load key "uno-ceo.pem": bad permissions
 SOLVED:
 In PowerShell execute these commands:
 
-source
-----
+[source]
+--
 $path = ".\uno-ceo.pem"
 # Reset to remove explicit permissions
 icacls.exe $path /reset
@@ -23,4 +25,4 @@ icacls.exe $path /reset
 icacls.exe $path /GRANT:R "$($env:USERNAME):(R)"
 # Disable inheritance and remove inherited permissions
 icacls.exe $path /inheritance:r
-----
+--
